Uncommented GOogle Analytics script from html. Trying Router basename to try to tackle the issue of crash on refresh on pages that isn't the landing page

--- a/frontend-event/index.html
+++ b/frontend-event/index.html
@@ -3,19 +3,16 @@
 
 <head>
   <!-- Google tag (gtag.js) -->
-  <!-- <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-LDPB450JPX"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-LDPB450JPX"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
 
-      gtag("config", "G-LDPB450JPX");
-    </script> -->
+    gtag("config", "G-LDPB450JPX");
+  </script>
 
   <meta charset="UTF-8" name="description"
     content="Happening Events App made to give users access to events from several sources" />
